--- a/data/index.html
+++ b/data/index.html
@@ -21,7 +21,7 @@
     <br>
     <div class="row">
       <div class="col-md-3">
-        <div class="card card-body bg-light">
+        <div class="card bg-light">
           <h6>Test Subject ID Number:</h6>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
